Se agregaron comentarios

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -92,9 +92,7 @@
       </div>
     </section>
 
-
-    
-
+    <!--Footer-->
 
     <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
       <p class="pie-texto text-center"> Otto´s Online <br> <i class="fa-regular fa-copyright"></i> Copyright - Todos los derechos reservados</p>
