--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="./index.html"><span class="text-warning">Otto´s</span> Online</a>
+          <a class="navbar-brand" href="../index.html"><span class="text-warning">Otto´s</span> Online</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
