--- a/pages/adopcion.html
+++ b/pages/adopcion.html
@@ -43,10 +43,14 @@
         </div>
       </nav>
     </header>
+
+    <section>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TbgB5zH8_3E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
     
 
 
-    <footer class="pie d-flex flex-column align-items-center justify-content-center bg-dark text-white mt-3">
+    <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
       <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
       <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
         <a href="#" target="_blank" rel="noopener noreferrer">
