--- a/pages/alimentacion.html
+++ b/pages/alimentacion.html
@@ -45,7 +45,7 @@
     </header>
     
 
-    <footer class="pie d-flex flex-column align-items-center justify-content-center bg-dark text-white mt-3">
+    <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
       <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
       <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
         <a href="#" target="_blank" rel="noopener noreferrer">
