--- a/pages/adopcion.html
+++ b/pages/adopcion.html
@@ -1,75 +1,177 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images/Logo-Otto`s.gif" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Otto´s Online - Adopción</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Te brindamos informacion y beneficios de tener un perro">
+  <meta name="keywords"
+    content="Alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
+  <link rel="shortcut icon" href="../images/Logo-Otto`s.gif" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilo.css">
+  <title>Otto´s Online - Adopción</title>
 </head>
+
 <body>
-    <!--Navbar-->
-    <header>
-      <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="../index.html"><span class="text-warning">Otto´s</span> Online</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/alimentacion.html">Alimentacion</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/adopcion.html">Adopcion</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-              </li>
-          </div>
+  <!--Navbar-->
+  <header>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="../index.html"><span class="text-warning">Otto´s</span> Online</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/alimentacion.html">Alimentacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/adopcion.html">Adopcion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+            </li>
         </div>
-      </nav>
-    </header>
-
-    <section>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/TbgB5zH8_3E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </section>
-    
-
-
-    <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
-      <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
-      <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
-        <a href="#" target="_blank" rel="noopener noreferrer">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="#">
-          <i class="fa-brands fa-square-facebook"></i>
-        </a>
-        <a href="#">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="#">
-          <i class="fa-brands fa-tiktok"></i>
-        </a>
-
       </div>
-      
-    </footer>
+    </nav>
+  </header>
+  <main>
+    <!--Articulo 1-->
+    <section class="container-fluid d-flex flex-column secondaryHero2">
+      <div class="text-center">
+        <h2 class="titulos mt-3">Beneficios de tener un Perro</h2>
+      </div>
+      <div class="text-center mt-3" data-aos="zoom-in">
+        <img src="../images/beneficios.jpg" alt="perroJugando" class="img-fluid perroArticulo rounded">
+      </div>
+    </section>
+    <article>
+      <div class="container">
+        <h3 class="titulos mt-3">Beneficios en salud</h3>
+        <p>En los últimos 40 años son muchos los estudios que han demostrado los beneficios para la salud provenientes
+          de tener mascotas, principalmente perros. <br> <br> Muchas investigaciones realizadas demuestran que las
+          personas que tienen un perro en casa, suelen evitar este tipo de problemas:</p>
+        <ul class="lista">
+          <li>Mayor probabilidad de sobrevivir después de un ataque al corazón</li>
+          <li>Disminución de la presión arterial en situaciones de estrés</li>
+          <li>Menos complicaciones de salud</li>
+          <li>Una mejora en su bienestar psicólogico</li>
+          <li>¡Incluso se dice que los niños que tienen perro pierden menos días de escuela por enfermedades!</li>
+        </ul>
+        <h3 class="titulos mt-3">Beneficios Emocionales</h3>
+        <ul class="lista">
+          <li>Es más probable que las personas se acerquen, sonrían y hablen con alguien que trae un perro</li>
+          <li>Cuando un niño es dueño de un perro, aprende acerca de la responsabilidad</li>
+          <li>La tenencia de mascotas ayuda a los niños a mejorar su autoestima y a desarrollar empatía</li>
+          <li>Los perros ayudan a dar apoyo social a quienes han sufrido una pérdida familiar o de alguna amistad</li>
+          <li>Los perros disminuyen los sentimientos de soledad</li>
+          <li>La tenencia de un perro puede mejorar y elevar las interacciones con otras personas</li>
+        </ul>
+        <h3 class="titulos mt-3">Programas terapéuticos</h3>
+        <p>Para nuestra fortuna, los perros de asistencia aportan un efecto de socialización a sus dueños y son usados
+          con frecuencia para ayudarlos a superar enfermedades o distintas condiciones de salud. <br><br>Los perros de
+          asistencia pueden ayudar con los sentimientos de autoestima y soledad. <br><br>Es sumamente importante
+          asegurarse de que una mascota esté bien entrenada y socializada para tener una buena relación.</p>
+      </div>
+    </article>
+    <!--Articulo 2-->
+    <section class="container-fluid d-flex flex-column secondaryHero2">
+      <div class="text-center">
+        <h2 class="titulos mt-3">Llegada de un nuevo cachorro</h2>
+      </div>
+      <div class="text-center mt-3" data-aos="zoom-in">
+        <img src="../images/llegada.jpg" alt="cachorro" class="img-fluid perroArticulo rounded">
+      </div>
+    </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <article>
+      <div class="container">
+        <h3 class="titulos mt-3">Todo está a punto de cambiar</h3>
+        <p>Cuando un cachorro llega, todo es diferente, por eso queremos compartir contigo algunos consejos para que
+          puedas cuidar del nuevo miembro de la familia y que crezca sano, fuerte y feliz. <br><br>Tu cachorro va a
+          necesitar mucho amor, apapachos, paciencia, una buena alimentación, ejercicios y todavía más paciencia.</p>
+        <h3 class="titulos mt-3">Características de un cachorro:</h3>
+        <ul class="lista">
+          <li>Duerme mucho.</li>
+          <li>Conoce su medio ambiente olfateando y mordiendo objetos.</li>
+          <li>Aprende a escarbar.</li>
+          <li>Explora todo y comienza a masticar.</li>
+          <li>Cambia de dientes.</li>
+          <li>Su sistema inmunológico está en proceso de desarrollo.</li>
+        </ul>
+        <h3 class="titulos mt-3">Sus primeros días</h3>
+        <p>Recíbelo con cariño y comprensión, haz que se sienta en casa.</p> <br>
+        <ul class="lista">
+          <li>Deja que olfateé cada esquina de su hogar.</li>
+          <li>Muéstrale dónde está su camita.</li>
+          <li>Aparta los objetos que no quieres que muerda; recuerda que tu cachorro tiene un instinto explorador.</li>
+          <li>Programa su primera visita al veterinario para valorar el estado de salud de tu cachorro.</li>
+          <li>Los primeros días tu cachorro puede sentirse solo y tal vez llore un poco, trata de no ir a verlo cada que
+            esto suceda.</li>
+        </ul>
+      </div>
+      <!--Video-->
+      <div class="video container d-flex flex-column align-items-center rounded">
+        <h3 class="text-warning p-3">Te dejamos un video con mas tips</h3>
+
+        <div class="pb-5">
+          <iframe width="700" height="315" src="https://www.youtube.com/embed/TbgB5zH8_3E" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+    </article>
+  </main>
+  <!--Footer-->
+  <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
+    <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
+    <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-square-facebook"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-twitter"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-tiktok"></i>
+      </a>
+
+    </div>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      easing: 'ease-out-back',
+      duration: 3000
+    });
+  </script>
 </body>
+
 </html>
