--- a/pages/alimentacion.html
+++ b/pages/alimentacion.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Consejos sobre la alimentacion de tu perro">
   <meta name="keywords"
-    content="Alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
+    content="Articulos sobre una buena alimentacion, alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
   <link rel="shortcut icon" href="../images/Logo-Otto`s.gif" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -46,9 +46,6 @@
             <li class="nav-item">
               <a class="nav-link" href="../pages/contacto.html">Contacto</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-            </li>
         </div>
       </div>
     </nav>
@@ -59,7 +56,7 @@
       <div class="container">
         <hr class="featurette-divider">
         <div data-aos="fade-up" class="d-flex justify-content-center mb-3">
-          <h3 class="titulos">Consejos sobre la alimentacion de tu perro</h3>
+          <h1 class="titulos text-center">Consejos sobre la alimentacion de tu perro</h1>
         </div>
         <hr class="featurette-divider">
       </div>
@@ -76,13 +73,13 @@
         <!-- The slideshow/carousel -->
         <div class="carousel-inner">
           <div class="carousel-item active d-item">
-            <img src="../images/alimentacion.jpg" alt="Los Angeles" class="d-block w-100 d-img rounded">
+            <img src="../images/alimentacion.jpg" alt="Perro comiendo" class="d-block w-100 d-img rounded">
           </div>
           <div class="carousel-item d-item">
-            <img src="../images/alimentacion2.jpg" alt="Chicago" class="d-block w-100 d-img rounded">
+            <img src="../images/alimentacion2.jpg" alt="Comedero" class="d-block w-100 d-img rounded">
           </div>
           <div class="carousel-item d-item">
-            <img src="../images/alimentacion3.jpg" alt="New York" class="d-block w-100 d-img rounded">
+            <img src="../images/alimentacion3.jpg" alt="Perro comiendo" class="d-block w-100 d-img rounded">
           </div>
         </div>
 
@@ -164,7 +161,8 @@
           <div class="tienda__textos text-light">
             <h5>Ingresa a nuestra tienda</h5>
             <p>Enterate todas las novedades que tenemos para vos</p>
-            <a href="../pages/tienda.html" class="btn btn-warning">Comprar</a>
+            <a href="https://listado.mercadolibre.com.ar/animales-mascotas/perros/tienda-de-perros_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D4%26applied_value_id%3DMLA1072%26applied_value_name%3DPerros%26applied_value_order%3D18%26applied_value_results%3D182%26is_custom%3Dfalse"
+              class="btn btn-warning" target="_blank">Comprar</a>
           </div>
         </div>
       </div>
@@ -174,7 +172,8 @@
   <!--Footer-->
 
   <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
-    <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
+    <p class="pie-texto text-center"> Otto´s Online <br> <i class="fa-regular fa-copyright"></i> Copyright - Todos los
+      derechos reservados</p>
     <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
       <a href="#" target="_blank" rel="noopener noreferrer">
         <i class="fa-brands fa-instagram"></i>
