--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Conoce nuestro proposito">
   <meta name="keywords"
-    content="Alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
+    content="Informacion sobre nuestra mision, alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
   <link rel="shortcut icon" href="../images/Logo-Otto`s.gif" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -45,9 +45,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/tienda.html">Tienda</a>
             </li>
         </div>
       </div>
@@ -103,7 +100,8 @@
         <div class="tienda__textos text-light">
           <h5>Ingresa a nuestra tienda</h5>
           <p>Enterate todas las novedades que tenemos para vos</p>
-          <a href="../pages/tienda.html" class="btn btn-warning">Comprar</a>
+          <a href="https://listado.mercadolibre.com.ar/animales-mascotas/perros/tienda-de-perros_NoIndex_True#applied_filter_id%3Dcategory%26applied_filter_name%3DCategor%C3%ADas%26applied_filter_order%3D4%26applied_value_id%3DMLA1072%26applied_value_name%3DPerros%26applied_value_order%3D18%26applied_value_results%3D182%26is_custom%3Dfalse"
+            class="btn btn-warning" target="_blank">Comprar</a>
         </div>
       </div>
     </div>
