--- a/pages/adopcion.html
+++ b/pages/adopcion.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Te brindamos informacion y beneficios de tener un perro">
   <meta name="keywords"
-    content="Alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
+    content="Articulos sobre una adopcion responsable y beneficios que conlleva, alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
   <link rel="shortcut icon" href="../images/Logo-Otto`s.gif" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -46,9 +46,6 @@
             <li class="nav-item">
               <a class="nav-link" href="../pages/contacto.html">Contacto</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-            </li>
         </div>
       </div>
     </nav>
@@ -57,10 +54,10 @@
     <!--Articulo 1-->
     <section class="container-fluid d-flex flex-column secondaryHero2">
       <div class="text-center">
-        <h2 class="titulos mt-3">Beneficios de tener un Perro</h2>
+        <h1 class="titulos mt-3">Beneficios de tener un Perro</h1>
       </div>
       <div class="text-center mt-3" data-aos="zoom-in">
-        <img src="../images/beneficios.jpg" alt="perroJugando" class="img-fluid perroArticulo rounded">
+        <img src="../images/beneficios.jpg" alt="Perro jugando" class="img-fluid perroArticulo rounded">
       </div>
     </section>
     <article>
@@ -98,7 +95,7 @@
         <h2 class="titulos mt-3">Llegada de un nuevo cachorro</h2>
       </div>
       <div class="text-center mt-3" data-aos="zoom-in">
-        <img src="../images/llegada.jpg" alt="cachorro" class="img-fluid perroArticulo rounded">
+        <img src="../images/llegada.jpg" alt="Cachorro" class="img-fluid perroArticulo rounded">
       </div>
     </section>
 
@@ -129,7 +126,7 @@
         </ul>
       </div>
       <!--Video-->
-      <div class="video container d-flex flex-column align-items-center rounded">
+      <div class="contenedor-video container d-flex flex-column align-items-center rounded">
         <h3 class="text-warning p-3">Te dejamos un video con mas tips</h3>
 
         <div class="pb-5">
@@ -143,7 +140,8 @@
   </main>
   <!--Footer-->
   <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
-    <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
+    <p class="pie-texto text-center"> Otto´s Online <br> <i class="fa-regular fa-copyright"></i> Copyright - Todos los
+      derechos reservados</p>
     <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
       <a href="#" target="_blank" rel="noopener noreferrer">
         <i class="fa-brands fa-instagram"></i>
