--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Contacta con nosotros">
-  <meta name="keywords" content="Alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
+  <meta name="keywords"
+    content="Contacto con la empresa completando el formulario ,alimento balanceado, cuchas para perros, juguetes para perros, correas, pretales, jaula">
   <link rel="shortcut icon" href="../images/Logo-Otto`s.gif" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -44,34 +45,39 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-            </li>
         </div>
       </div>
     </nav>
   </header>
-<!--Formulario de contacto-->
+  <!--Formulario de contacto-->
   <main>
     <section class="container">
       <div class="row my-5">
         <div class="col-sm-12 col-md-12 col-lg-12">
-          <h4 class="titulos text-center pt-3">Contactanos/Solicita presupuestos.</h4>
+          <h1 class="titulos text-center pt-3">Contactanos/Solicita presupuestos.</h1>
           <form action="" method="post" class="formu">
             <div class="mb-3">
-              <label for="nombre" class="form-label"><p>Nombre:</p></label>
+              <label for="nombre" class="form-label">
+                <p>Nombre:</p>
+              </label>
               <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre" required>
             </div>
             <div class="mb-3">
-              <label for="apellido" class="form-label"><p>Apellido:</p></label>
+              <label for="apellido" class="form-label">
+                <p>Apellido:</p>
+              </label>
               <input type="text" class="form-control" id="apellido" placeholder="Ingrese su Apellido" required>
             </div>
             <div class="mb-3">
-              <label for="email" class="form-label"><p>Email:</p></label>
+              <label for="email" class="form-label">
+                <p>Email:</p>
+              </label>
               <input type="email" class="form-control" id="email" placeholder="Ingrese su Email" required>
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label"><p>Dejenos su consulta:</p></label>
+              <label for="exampleFormControlTextarea1" class="form-label">
+                <p>Dejenos su consulta:</p>
+              </label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <button type="submit" class="btn">Enviar</button>
@@ -81,9 +87,10 @@
       </div>
     </section>
   </main>
-<!--Footer-->
+  <!--Footer-->
   <footer class="pie d-flex flex-column align-items-center justify-content-center text-white mt-3">
-    <p class="pie-texto text-center"> Otto´s Online <br> Copyright - Todos los derechos reservados</p>
+    <p class="pie-texto text-center"> Otto´s Online <br> <i class="fa-regular fa-copyright"></i> Copyright - Todos los
+      derechos reservados</p>
     <div class=" iconos-redes d-flex flex-wrap align-items-center justify-content-center">
       <a href="#" target="_blank" rel="noopener noreferrer">
         <i class="fa-brands fa-instagram"></i>
